# POLARIS_GEM_Simulator

./: .gitignore  README.md  generate_waypoints.py  manual_control.py  run_docker_container.sh  set_pos.py  stop_docker_container.sh
gem_calib_tools/: CMakeLists.txt  package.xml
gem_calib_tools/src/data/: camera_intrinsics.json  extrinsics.npz  lidar_1.npz  lidar_cal_points.npy
gem_calib_tools/src/scripts/: calibrate_extrinsics.py  capture_ouster_oak.py  pick_lidar_points.py  sensor_fusion.py
gem_simulator/gem_description/: CMakeLists.txt  package.xml
gem_simulator/gem_description/launch/: gem_description.launch
gem_simulator/gem_description/urdf/: gem.gazebo  gem.urdf.xacro  gem_e2.gazebo  gem_e2.urdf.xacro  gem_e4.gazebo  gem_e4.urdf.xacro  gem_e4_main.urdf.xacro  macros.xacro
gem_simulator/gem_gazebo/: CMakeLists.txt  package.xml
gem_simulator/gem_gazebo/config/: cone_positions.yaml  controllers.yaml  ekf.yaml  gem_ackermann_control_params_ros2.yaml  gem_joint_control_params_ros2.yaml
gem_simulator/gem_gazebo/launch/: gem_vehicle.launch  parking_with_cones.launch  sensor_fusion.launch  spawn_pedestrian.launch  test_controllers.launch.py
gem_simulator/gem_gazebo/models/stop_sign/: model.config  model.sdf
gem_simulator/gem_gazebo/models/stop_sign/meshes/: Stop_Sign.stl
gem_simulator/gem_gazebo/models/traffic_light/: model.config  model.sdf
gem_simulator/gem_gazebo/models/traffic_light/meshes/: traffic_light.dae
gem_simulator/gem_gazebo/scenes/: high_bay_3d.yaml  highbay_track.yaml  parking.yaml  parkingtestcase1.yaml
gem_simulator/gem_gazebo/scripts/: collision_logger.py  gem_control.py  gem_gnss_image.py  gem_sensor_info.py  ins_publisher.py  insnavgeod_publisher.py  pedestrian_mover.py  spawn_agents.py  spawn_cones_from_yaml.py  spawn_objects.py  spawn_pedestrians_from_yaml.py  test_controllers.py
gem_simulator/gem_gazebo/worlds/: high_bay_3d.world  highbay_track.world  parkingtestcase1.world
gem_simulator/gem_launch/: CMakeLists.txt  package.xml
gem_simulator/gem_launch/config_rviz/: gem_e2.rviz  gem_e2_high_bay.rviz  gem_e4.rviz  gem_e4_high_bay.rviz  gem_velodyne.rviz
gem_simulator/gem_launch/config_rviz/reference/: gem_mp3.rviz
gem_simulator/gem_launch/launch/: gem_init.launch  gem_sensor_info.launch
ros_drivers/velodyne_simulator/velodyne_description/urdf/: OS1.urdf.xacro  VLP-16.urdf.xacro
setup/: Dockerfile  build_docker_image.sh  docker-compose.yaml
utils/: generate_waypoints.py  set_pos.py
vehicle_drivers/scenes/: pedestrian.yaml
